tests/examples/fail/sorts/def_wrong_arg.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s

def f(x: s, y: s) -> bool {
  x = y
}

assert forall x:bool, y:s. f(x, y)
